--- a/bin/FXML_Files/Login.fxml
+++ b/bin/FXML_Files/Login.fxml
@@ -20,8 +20,8 @@
             <TextField fx:id="username" layoutX="149.0" layoutY="74.0" promptText="Ingresa tu email." />
             <PasswordField fx:id="password" layoutX="148.0" layoutY="130.0" promptText="Ingresa tu contraseña." />
             <Button fx:id="forgotAccount" disable="true" layoutX="161.0" layoutY="178.0" mnemonicParsing="false" text="¿Olvidaste tu cuenta?" />
-            <Button fx:id="register" layoutX="257.0" layoutY="233.0" mnemonicParsing="false" onAction="#createRegister" styleClass="secondaryButton" text="Registrarse" />
-            <Button fx:id="login" defaultButton="true" layoutX="131.0" layoutY="233.0" mnemonicParsing="false" onAction="#createLogin" styleClass="defaultButton" text="Ingresar" />
+            <Button fx:id="register" layoutX="242.0" layoutY="250.0" mnemonicParsing="false" onAction="#createRegister" prefHeight="40.0" prefWidth="242.0" styleClass="secondaryButton" text="Registrarse" />
+            <Button fx:id="login" defaultButton="true" layoutY="250.0" mnemonicParsing="false" onAction="#createLogin" prefHeight="40.0" prefWidth="242.0" styleClass="defaultButton" text="Ingresar" />
          </children></Pane>
    </children>
 </AnchorPane>
